--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	"dependencies": {
 		"@kor-ui/kor": "^1.11.3",
 		"@lit-labs/react": "^1.2.0",
+		"chart.js": "^4.3.0",
 		"lit": "^2.7.5",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.44.2"
 	},
