adding datalabels plugin

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@kor-ui/kor": "^1.11.3",
 		"@lit-labs/react": "^1.2.0",
 		"chart.js": "^4.3.0",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"lit": "^2.7.5",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^5.2.0",
