--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,11 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  // "parser": "@typescript-eslint/parser",
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
+  // "parser": "babel-eslint",
+  // "parser": "@babel/eslint-parser",
   "parserOptions": {
+    "requireConfigFile": false,
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
@@ -23,6 +25,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
