--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-	"name": "loan-calculator-app",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@kor-ui/kor": "^1.11.3",
-		"@lit-labs/react": "^1.2.0",
-		"chart.js": "^4.3.0",
-		"chartjs-plugin-datalabels": "^2.2.0",
-		"lit": "^2.7.5",
-		"react": "^18.2.0",
-		"react-chartjs-2": "^5.2.0",
-		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.44.2"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.59.0",
-		"@typescript-eslint/parser": "^5.59.0",
-		"@vitejs/plugin-react-swc": "^3.0.0",
-		"babel-eslint": "^10.1.0",
-		"eslint": "^8.38.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
-		"sass": "^1.62.1",
-		"typescript": "^5.0.2",
-		"vite": "^4.3.9"
-	}
+  "name": "loan-calculator-app",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "test": "vitest",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@kor-ui/kor": "^1.11.3",
+    "@lit-labs/react": "^1.2.0",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "lit": "^2.7.5",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.22.9",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "sass": "^1.62.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.3.9",
+    "vitest": "^0.33.0"
+  }
 }
